--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 html, body {
     height:100%;
     text-align:center;
-    font-family: verdana;
-}
-
-
-h1 {
-    font-size:36pt;
-    color:#FF33CC;
+    font-family: Verdana, Geneva, sans-serif;
 }
 
 p {
     font-size:24pt;
 }
 
-#nextday {
+body p:first-child {
     margin-top: 200px;
+}
+
+time {
+    display: block;
+    font-size:36pt;
+    color:#FF0090;
+    font-weight: bold;
 }
